--- a/14-Agentic-AI/code/mini_projects_langchain_langgraph.ipynb
+++ b/14-Agentic-AI/code/mini_projects_langchain_langgraph.ipynb
@@ -35,23 +35,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "e6630e0e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Hello! It's nice to meet you. I'm here to help answer any questions or chat with you about any topic that interests you. How's your day going so far?\""
+       "\"Hello! It's nice to meet you. I'm here to help with any questions or topics you'd like to discuss. How can I assist you today?\""
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "llm = OllamaLLM(model= 'llama3.2')\n",
+    "llm = OllamaLLM(model= 'llama3.2', temperature=0.7)\n",
     "\n",
     "llm.invoke(\"Hello, Ollama!\")"
    ]
@@ -111,7 +111,7 @@
     {
      "data": {
       "text/plain": [
-       "'Based on the provided text from the Bhagavad Gita, I can say that lust (or kama) is considered the greatest enemy of living entities, and it induces them to remain entangled in the material world. Lust is described as a mode of passion that, if not elevated to the mode of goodness through spiritual attachment, leads to degradation into wrath.\\n\\nLust is said to be the symbol of ignorance, keeping the living entity within the material world. When living entities indulge in lustful activities, they may experience temporary happiness, but ultimately, it is an enemy that hinders their spiritual growth and understanding of their real position.\\n\\nThe text also mentions that lust cannot be satisfied by sense enjoyment, just like fire cannot be extinguished by a constant supply of fuel. In the material world, sex is considered the center of all activities, and this leads to the shackles of sex life, which are similar to prison bars for those who disobey the laws of the Lord.\\n\\nIn essence, lust is seen as a fundamental flaw in human nature that prevents living entities from realizing their true purpose and connection with the Supreme Being. When transformed into love for the Supreme (Krsna consciousness), lust can be spiritualized, becoming a positive force rather than an enemy.'"
+       "'Based on the provided context from the Bhagavad Gita, lust is described as the greatest enemy of living entities and the primary cause of their entanglement in the material world.\\n\\nLust is said to be the manifestation of the mode of passion (raja-guña) within an individual. When a living entity comes into contact with the material creation, their eternal love for Kåñëa (the Supreme Personality of Godhead) is transformed into lust, driven by their senses (indriyāëi), mind (manaù), and intelligence (buddhiù).\\n\\nLust is characterized as an all-devouring sinful enemy that can never be satisfied by material sense gratification. It is said to \"cover\" or \"overwhelm\" the embodied soul (dehinam), preventing them from attaining true knowledge (jïänam) and spiritual realization.\\n\\nThe Bhagavad Gita teaches that when lust is not transformed into love for the Supreme, it can lead to a cycle of craving, dissatisfaction, and ultimately, wrath. However, when an individual transforms their lustful propensities into a love for Kåñëa, or desires everything for Kåñëa, both lust and wrath can be spiritualized.\\n\\nIn this context, the Bhagavad Gita suggests that by cultivating a sense of devotion (bhakti) to Kåñëa, one can transcend the limitations of lust and attain liberation from the material world.'"
       ]
      },
      "execution_count": 5,
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "f2423dcd",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "6cd1dec0",
    "metadata": {},
    "outputs": [],
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "02cce5a4",
    "metadata": {},
    "outputs": [
@@ -234,20 +234,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chat with Bhagavad Gita Expert (type '/forget' to clear history, '/exit' to quit)\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "Interrupted by user",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[24]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mChat with Bhagavad Gita Expert (type \u001b[39m\u001b[33m'\u001b[39m\u001b[33m/forget\u001b[39m\u001b[33m'\u001b[39m\u001b[33m to clear history, \u001b[39m\u001b[33m'\u001b[39m\u001b[33m/exit\u001b[39m\u001b[33m'\u001b[39m\u001b[33m to quit)\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m     user_input = \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[33;43mYou: \u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      8\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m user_input.lower() == \u001b[33m\"\u001b[39m\u001b[33m/exit\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m      9\u001b[39m         \u001b[38;5;28;01mbreak\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Github/365DaysOfData/venv/lib/python3.13/site-packages/ipykernel/kernelbase.py:1275\u001b[39m, in \u001b[36mKernel.raw_input\u001b[39m\u001b[34m(self, prompt)\u001b[39m\n\u001b[32m   1273\u001b[39m     msg = \u001b[33m\"\u001b[39m\u001b[33mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1274\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(msg)\n\u001b[32m-> \u001b[39m\u001b[32m1275\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_input_request\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   1276\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1277\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_parent_ident\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mshell\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1278\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mget_parent\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mshell\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1279\u001b[39m \u001b[43m    \u001b[49m\u001b[43mpassword\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m   1280\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Github/365DaysOfData/venv/lib/python3.13/site-packages/ipykernel/kernelbase.py:1320\u001b[39m, in \u001b[36mKernel._input_request\u001b[39m\u001b[34m(self, prompt, ident, parent, password)\u001b[39m\n\u001b[32m   1317\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[32m   1318\u001b[39m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[32m   1319\u001b[39m     msg = \u001b[33m\"\u001b[39m\u001b[33mInterrupted by user\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m-> \u001b[39m\u001b[32m1320\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(msg) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m   1321\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[32m   1322\u001b[39m     \u001b[38;5;28mself\u001b[39m.log.warning(\u001b[33m\"\u001b[39m\u001b[33mInvalid Message:\u001b[39m\u001b[33m\"\u001b[39m, exc_info=\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: Interrupted by user"
+      "Chat with Bhagavad Gita Expert (type '/forget' to clear history, '/exit' to quit)\n",
+      "\n",
+      "Human: what do you think aobut how this world is going to destroy?\n",
+      "AI: Based on the provided context from the Bhagavad Gita, I believe that this world will be destroyed by those who are driven by demoniac tendencies and engage in activities that are detrimental to the well-being of others. These individuals are described as having \"no intelligence\" and being devoid of all sense, and they prioritize their own sense gratification over the happiness and prosperity of others.\n",
+      "\n",
+      "In particular, the verse mentions the invention of nuclear weapons, which is a modern example of such destructive technology. The Bhagavad Gita suggests that such creations are not meant for peace and prosperity but rather for destruction.\n",
+      "\n",
+      "The text also highlights the importance of education in developing the mode of goodness, which can lead to sobriety, full knowledge, and happiness. It warns against the dangers of animal killing and the consequences of being unaware of the interconnectedness of life.\n",
+      "\n",
+      "Ultimately, the verse suggests that if a certain percentage of the population develops Kåñëa consciousness and becomes situated in the mode of goodness, there is the possibility for peace and prosperity throughout the world. However, without such awareness and development, the world will continue to be plagued by destructive tendencies and chaos.\n"
      ]
     }
    ],
@@ -283,9 +279,57 @@
    "id": "3f2b67f1",
    "metadata": {},
    "source": [
-    "# 2. multi-agent debate\n",
+    "# 2. multi-agent pattern\n",
     "\n",
-    "create 2 agents (one optimistic, one pessimistic) and wire them in langgraph so they debate a user’s query. final node summarizes the debate for the user."
+    "Create different specialized agent and extract output from different layers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9765623d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import TypedDict\n",
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.prompts.chat import ChatPromptTemplate\n",
+    "\n",
+    "END = \"END\"\n",
+    "\n",
+    "# --- debate state ---\n",
+    "class DebateState(TypedDict):\n",
+    "    messages: list          # full transcript\n",
+    "    next: str               # which agent speaks next\n",
+    "    round: int              # current round\n",
+    "    max_rounds: int         # stop after N rounds\n",
+    "    topic: str              # the debate topic\n",
+    "    sides: dict             # which side each agent defends\n",
+    "    scores: dict            # track scores per agent\n",
+    "    highlights: dict        # best one-liner or argument from each\n",
+    "\n",
+    "# --- workflow engine ---\n",
+    "class StateGraph:\n",
+    "    def __init__(self):\n",
+    "        self.nodes = {}\n",
+    "        self.entry_point = None\n",
+    "    \n",
+    "    def add_node(self, name, func):\n",
+    "        self.nodes[name] = func\n",
+    "    \n",
+    "    def set_entry_point(self, name):\n",
+    "        self.entry_point = name\n",
+    "    \n",
+    "    def get_node(self, name):\n",
+    "        return self.nodes.get(name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e56dae55",
+   "metadata": {},
+   "source": [
+    "    Agent that argues based on science, logic, and evidence"
    ]
   },
   {
@@ -294,7 +338,163 @@
    "id": "f2f11c50",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "def science_agent(state: DebateState):\n",
+    "    prompt = ChatPromptTemplate.from_messages([\n",
+    "        (\"system\", f\"You are a science debater. Defend the side: {state['sides']['science']}. \"\n",
+    "                   \"Respond with one short, sharp paragraph using scientific reasoning and facts. \"\n",
+    "                   \"Be persuasive but concise.\"),\n",
+    "        (\"user\", \"{messages}\")\n",
+    "    ])\n",
+    "    chain = prompt | llm\n",
+    "    response = chain.invoke({\"messages\": state[\"messages\"]})\n",
+    "    \n",
+    "    # log message\n",
+    "    state[\"messages\"].append(f\"Science: {response}\")\n",
+    "    \n",
+    "    # update next turn\n",
+    "    state[\"next\"] = \"religion\"\n",
+    "    return state\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5847f5b2",
+   "metadata": {},
+   "source": [
+    "    Agent that argues from religious/God perspective"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61923c50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def religion_agent(state: DebateState):\n",
+    "    prompt = ChatPromptTemplate.from_messages([\n",
+    "        (\"system\", f\"You are a religious debater. Defend the side: {state['sides']['religion']}. \"\n",
+    "                   \"Respond with one short, sharp paragraph using religious, moral, or spiritual reasoning. \"\n",
+    "                   \"Be persuasive but concise.\"),\n",
+    "        (\"user\", \"{messages}\")\n",
+    "    ])\n",
+    "    chain = prompt | llm\n",
+    "    response = chain.invoke({\"messages\": state[\"messages\"]})\n",
+    "    \n",
+    "    # log message\n",
+    "    state[\"messages\"].append(f\"Religion: {response}\")\n",
+    "    \n",
+    "    # update next turn\n",
+    "    state[\"next\"] = \"evaluator\"\n",
+    "    return state\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c956542",
+   "metadata": {},
+   "source": [
+    "    Harsh evaluator that scores both sides and picks best highlights."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "744dac40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def evaluator_agent(state: DebateState):    \n",
+    "    # grab last two debater messages\n",
+    "    last_science = [m for m in state[\"messages\"] if m.startswith(\"Science:\")][-1]\n",
+    "    last_religion = [m for m in state[\"messages\"] if m.startswith(\"Religion:\")][-1]\n",
+    "    \n",
+    "    # dummy scoring: could replace with LLM judgment, but here random for demo\n",
+    "    science_score = random.randint(5, 10)\n",
+    "    religion_score = random.randint(5, 10)\n",
+    "    \n",
+    "    state[\"scores\"][\"science\"] += science_score\n",
+    "    state[\"scores\"][\"religion\"] += religion_score\n",
+    "    \n",
+    "    # pick \"highlight\" (just choose whichever scored higher this round)\n",
+    "    if science_score >= religion_score:\n",
+    "        state[\"highlights\"][\"science\"] = last_science\n",
+    "        highlight = f\"Best this round: Science side → {last_science}\"\n",
+    "    else:\n",
+    "        state[\"highlights\"][\"religion\"] = last_religion\n",
+    "        highlight = f\"Best this round: Religion side → {last_religion}\"\n",
+    "    \n",
+    "    # log judge decision\n",
+    "    decision = (f\"Evaluator: Science scored {science_score}, \"\n",
+    "                f\"Religion scored {religion_score}. {highlight}\")\n",
+    "    state[\"messages\"].append(decision)\n",
+    "    \n",
+    "    # advance round or end debate\n",
+    "    if state[\"round\"] >= state[\"max_rounds\"]:\n",
+    "        state[\"next\"] = END\n",
+    "    else:\n",
+    "        state[\"round\"] += 1\n",
+    "        state[\"next\"] = \"science\"\n",
+    "    \n",
+    "    return state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b83dc845",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "workflow = StateGraph()\n",
+    "workflow.add_node(\"science\", science_agent)\n",
+    "workflow.add_node(\"religion\", religion_agent)\n",
+    "workflow.add_node(\"evaluator\", evaluator_agent)\n",
+    "workflow.set_entry_point(\"science\")\n",
+    "\n",
+    "topic = input(\"Enter the debate topic (e.g., Education vs Money): \")\n",
+    "\n",
+    "sides = {\n",
+    "    \"science\": topic.split(\" vs \")[0] if \"vs\" in topic else \"Education\",\n",
+    "    \"religion\": topic.split(\" vs \")[1] if \"vs\" in topic else \"Money\"\n",
+    "}\n",
+    "\n",
+    "state = DebateState(\n",
+    "    messages=[],\n",
+    "    next=workflow.entry_point,\n",
+    "    round=1,\n",
+    "    max_rounds=5,\n",
+    "    topic=topic,\n",
+    "    sides=sides,\n",
+    "    scores={\"science\": 0, \"religion\": 0},\n",
+    "    highlights={\"science\": \"\", \"religion\": \"\"}\n",
+    ")\n",
+    "\n",
+    "while state[\"next\"] != END:\n",
+    "    agent_func = workflow.get_node(state[\"next\"])\n",
+    "    state = agent_func(state)\n",
+    "    print(state[\"messages\"][-1])   \n",
+    "\n",
+    "print(\"\\n--- FINAL RESULTS ---\")\n",
+    "print(f\"Science total: {state['scores']['science']} points\")\n",
+    "print(f\"Religion total: {state['scores']['religion']} points\")\n",
+    "\n",
+    "if state[\"scores\"][\"science\"] > state[\"scores\"][\"religion\"]:\n",
+    "    print(\"WINNER: Science side\")\n",
+    "elif state[\"scores\"][\"science\"] < state[\"scores\"][\"religion\"]:\n",
+    "    print(\"WINNER: Religion side\")\n",
+    "else:\n",
+    "    print(\"DRAW!\")\n",
+    "\n",
+    "print(\"\\n--- BEST HIGHLIGHTS ---\")\n",
+    "print(f\"Science: {state['highlights']['science']}\")\n",
+    "print(f\"Religion: {state['highlights']['religion']}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
